<resources>
    <string-array name="main_title">
        <item>B.C.A.</item>
        <item>B.B.A.</item>
        <item>B.Sc. Physics</item>
        <item>B.A. Sociology</item>
        <item>B.Com.</item>
        <item>P.G,D.C.A</item>
        <item>B.Com. Hons</item>
        <item>Education</item>
        <item>Library</item>
    </string-array>
    <string-array name="sub_title">
        <item>Bachelor in Computer Application</item>
        <item>Bachelor of Business Administration</item>
        <item>Bachelor in Science</item>
        <item>Bachelor in Arts</item>
        <item>Bachelor in Commerce</item>
        <item>P.G,Diploma in Computer Application</item>
        <item>Bachelor in Commerce Hons</item>
        <item>Department of Education</item>
        <item>Department of Library</item>
    </string-array>
    <string-array name="image_title">
        <item>@drawable/bca1</item>
        <item>@drawable/bba1</item>
        <item>@drawable/science1</item>
        <item>@drawable/ba1</item>
        <item>@drawable/bcom1</item>
        <item>@drawable/bca1</item>
        <item>@drawable/bcom1</item>
        <item>@drawable/medu1</item>
        <item>@drawable/mlib1</item>
    </string-array>
    <string name="app_name">BareillyCollegeBareilly</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="large_text">
        " Bareilly is a premier institute of M. J. P. Rohilkhand University located in Bareilly in the Indian state of Utter Pradesh. "
        "It was established in the British period in the year 1837 "
        "Bareilly College has now operated for over one hundred seventy seven years of useful services to the cause of the education not only in Rohikhand region but to entire north India. \n"
        "We deliver education in almost all the subjects at undergraduate and postgraduate level. "
        "We have a wealth of about 25000 students on rolls. One of the significant achievements of this institution, among many, is being granted a grade ‘A’  by the National Assessment and Accreditation Council (NAAC) for the Undergraduate, Post-graduate and doctoral programs of the college."
        "This magnanimous achievement is the result of cumulative factors comprising the infrastructure, teaching pedagogy, administrative discipline, pertinacious spirit of the faculty members for the cause of education and the indefatigable efforts of its staff members. "
        "The mission of our institution is to establish traditions which will foster creativity and growth of excellence. The institute has the following broad objectives:
.\n"
        "To generate new knowledge to promote academic growth by offering state-of-the-art undergraduate, postgraduate and doctoral programmes and by engaging a cutting-edge research work.
\n"
        "To identify, based on an informed perception of Indian, regional and global needs, areas of specialization upon which the institute can concentrate.
\n"
        "To develop human potential to its fullest extent so that intellectually capable and imaginatively gifted leaders can emerge in a range of professions.
\n"
        "To provide research and development consultancy which will promote contact with and be of service to society and to government and Civic organizations.
\n"
        "Our Values include academic integrity and accountability; respect and tolerance for the views of every individual; attention to issues of national relevance as well as of global concern.; breadth of understanding, including knowledge of the human science; appreciation of intellectual excellence and creativity.
\n"
        "With this mission and value policy we thus look forward to contribute to India and in particular to north India through excellence in education and research and to serve as a valuable resource for society; and remain a source of pride for all Indians.

\n"



    </string>
    <string name="bcad">
              " The basic objective of the programme is to open a channel of admission for computer courses for students who have done the 10+2 with Mathematics as one of the subjects and are interested in taking computer as a career. After acquiring the Bachelor's Degree in Computer (BCA) is a further educational opportunity to go for an MCA or Master programme of University. The duration of BCA course shall be three academic years consisting of six semesters. Each semester will be of about ninety working days duration and is followed by an examination of the University with a small break of summer vacations. The admission will be governed by the rules prescribed by the State Government/University from time to time."
            "Infrastructure:\n"
        "Computer Department in Bareilly College Bareilly has its own multistoried building. There is a separate computer lab for students. There is a separate library for students. Class rooms are well equipped with teaching facilities."</string>
    <string name="bcae">"Eligibility for BCA
\n"
        "Admission to BCA course is open to a candidate who has passed Intermediate Examination of U.P. Board or C.B.S.E. and I.C.S.E. Boards or an examination recognised as equivalent to 10+2 with a minimum of 45% marks (40% marks in case of SC/ST categories) and Mathematics as one of the subjects in 10+2 (Intermediate) Examination."
        "Admission Procedure\n\n"
        "Admission to BCA programme shall be made by Bareilly College strictly through merit Index of 10+2 exam or equivalent. Reservation as per Govt. of U.P. Notification will be applicable.\n\n"

       </string>
    <string name="bcat">
        "Faculty Member\n"
               "Mrs ROMA SAXENA (In Charge)\n"
               "Mr OMKAR SINGH\n"
               "Dr MANO YADAV\n"
    </string>
    <string name="bcomd">
        "FACULTY OF COMMERCE\n"
        "About the Course:\n"
"The Department of Commerce was created in the year 1944 and it started its teaching work in collaboration with the Economics Department of the college and finally shifted to the Faculty of Commerce Building in the year 1950. Since 1950 this faculty is functioning as an independent unit for undergraduate, postgraduate and research.\n\n"
    </string>
    <string name="bcome">
        "Research"
         "Sociological Practice"
        "According to the guidelines of M.J.P. Rohilkhand University, Bareilly, the admission in this course strictly based on 10+2 merit. The minimum 45% marks at 10+2 level needed for General and OBC category applicants and 40% marks for SC/ST category applicants. \n\"
    </string>
    <string name="bcomt">
"Dr A K SAXENA\n"
"Dr P K AGRAWAL (In Charge)\n"
"Dr RAJEEV MEHROTRA\n"
"Dr BHARTENDU SHARMA\n"
"Dr S S SHARMA\n"
"Dr BHOOPENDRA SINGH\n"
"Dr OMKAR\n"
"Dr ANOOP KUMAR\n"
"Dr DAYA RAM GANGWAR\n"
    </string>
    <string name="bscd">
        "About the Course:\n"
"Physics is the study of every thing next to us. It is the scientific study of matter and  energy and how they interact with each other. Physics deals with matter on scales ranging from sub atomic particles of nano dimensions to stars and even entire galaxies of very large dimensions. As an experimental science, Physics utilizes the scientific methods to formulate and test hypothesis that are based on observations  of the natural world. The objective  of Physics is to use the results of these experiments to formulate scientific laws in the language of mathematics, which can then be used to predict the other phenomena.  The prime goal of the physics is therefore to understand the natural world. In a broad sense Physics can be seen as the most fundamental of the natural science.\n\n"
        "About the Department\n\n"
"The Physics department has its own glorious past. In the department the graduate classes were started since 1926, while the Post graduate classes have been running since 1957. The department has highly qualified faculty of national/international repute. The department  has excellent reputation for its  academic as well as research activities . The well equipped laboratories for both undergraduate as well as  for post graduate classes is the prime attraction of the department.  The department also have a rich library and number of  educational films,  a large telescope and other various tools for betterment of understanding."

    </string>
    <string name="bsce">
        "According to the guidelines of M.J.P. Rohilkhand University, Bareilly, the admission in this course strictly based on 10+2 merit. The minimum 45% marks at 10+2 level needed for General and OBC category applicants and 40% marks for SC/ST category applicants. \n"
    </string>
    <string name="bsct">
        "The faculty members of the department are actively engaged in research in various discipline (both theoretical and experimental) e.g. Atomic and molecular collision, Magneto-hydrodynamics, thin films, Low and intermediate Nuclear Physics, Dielectrics, NMR, Nanoparticle Physics, Ultrasonic . A number of research projects funded by different agencies e.g.  UGC, DST, IUAC, IUC(DAEF) etc.  are currently running in the department . The department  also has collaborations with different National research centers and universities.  The department has well equipped research laboratories which includes  Computational lab, Ultrasonic lab, Nuclear Physics Lab, Nanoparticle and nanoscience lab, Thin film lab.\n\n"
        Faculty Members:-\n\n"
        "DR H V GAUTAM"
        "DR SANJEEV SAXENA (In Charge)"
        "DR V P SINGH"
        "DR (Mrs) RITU AGRAWAL"
        "DR SUNDAR SINGH"
        "DR NEERAJ RATHORE"
        "DR P K VERMA\n"
        "DR AVINASH AGRAWAL"
        "DR AJAI KUMAR SINGH"
        "DR SANDEEP KUMAR SAXENA"
        "DR PUSHPENDRA GANGWAR (MANDEYA POST)"
    </string>
    <string name="contact">Contact</string>
    <string name="all_department_events_informations">All department Events informations</string>
    <string name="todo">TODO</string>
    <string name="about">About</string>
    <string name="click_here_for_about_page_of_bareilly_college_bareilly">Click here for About page of Bareilly College Bareilly</string>
    <string name="course">Course</string>
    <string name="download_the_sillaybus_of_all_cources_in_pdf">Download the sillaybus of all cources in pdf</string>
    <string name="click_here_for_course_page_of_bareilly_college_bareilly">Click here for Course page of Bareilly College Bareilly</string>
    <string name="syllaybus">Syllaybus</string>
    <string name="events">Events</string>
    <string name="contact_to_bareilly_college_bareilly">Contact to Bareilly College Bareilly</string>
</resources>