<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relativelayout">

    <ImageView
        android:id="@+id/slideimageview"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="74dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo"
        android:padding="20dp"
        android:background="@drawable/cerclebackgroundpink"

        android:src="@drawable/contact" />


    <TextView
        android:id="@+id/slideheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/contact"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:text="@string/contact"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:textAlignment="center"
        android:id="@+id/slidedesc"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="262dp"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/red"
        android:text="@string/contact_to_bareilly_college_bareilly"
        android:textSize="18sp" />




</RelativeLayout>